--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://lelitta.github.io/Australi-r-wint-voor-de-tweede-keer-dezelfde-loterij/">https://lelitta.github.io/Australi-r-wint-voor-de-tweede-keer-dezelfde-loterij/</a><br>
+                <a target="_bLank" href="https://onlinecasinoamsterdam.s3.us-east-005.backblazeb2.com/Australi%C3%ABr+wint+voor+de+tweede+keer+dezelfde+loterij/index.html">https://onlinecasinoamsterdam.s3.us-east-005.backblazeb2.com/Australi%C3%ABr+wint+voor+de+tweede+keer+dezelfde+loterij/index.html</a><br>
+                <a target="_bLank" href="https://australi-r-wint-voor-de-tweede-kee-git-c269ac-lettitas-projects.vercel.app/">https://australi-r-wint-voor-de-tweede-kee-git-c269ac-lettitas-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://radiant-profiterole-729385.netlify.app/">https://radiant-profiterole-729385.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
